RESOLVED FIXED160636
[Cocoa] -[_WKRemoteObjectRegistry() _invokeMethod:] leaks a block
https://bugs.webkit.org/show_bug.cgi?id=160636
Summary [Cocoa] -[_WKRemoteObjectRegistry() _invokeMethod:] leaks a block
mitz
Reported 2016-08-06 14:59:11 PDT
Patch forthcoming.
Attachments
Release created block (1.82 KB, patch)
2016-08-06 15:02 PDT, mitz
darin: review+
mitz
Comment 1 2016-08-06 15:02:29 PDT
Created attachment 285498 [details] Release created block
mitz
Comment 2 2016-08-06 18:43:13 PDT
Note You need to log in before you can comment on or make changes to this bug.