[Cocoa] -[_WKRemoteObjectRegistry() _invokeMethod:] leaks a block https://bugs.webkit.org/show_bug.cgi?id=160636

Reviewed by Darin Adler.

* Shared/API/Cocoa/_WKRemoteObjectRegistry.mm:
(-[_WKRemoteObjectRegistry _invokeMethod:]): Release the block returned from
  __NSMakeSpecialForwardingCaptureBlock.



Canonical link: https://commits.webkit.org/178764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204232 268f45cc-cd09-0410-ab3c-d52691b4dbfc